<resources>

    <!--  GUI  -->
    <string name="event_date">Data:</string>
    <string name="toast_reset_date">Data została zresetowana</string>
    <string name="toast_event_without_name">Wydarzenie bez nazwy nie zostało dodane</string>
    <string name="toast_event_with_name_which_exists">"Istnieje już wydarzenie o takiej nazwie"</string>
    <string name="no">Nie</string>
    <string name="yes">Tak</string>
    <string name="delete_confirmation">Na pewno usunąć?</string>
    <string name="event_history">Historia wydarzenia</string>
    <string name="your_events">Twoje wydarzenia</string>
    <string name="add_event_menu_option">add event</string>
    <string name="name">Nazwa:</string>
    <string name="now">teraz</string>
    <string name="change_event_name_information">Podaj nową nazwę dla tego wydarzenia</string>
    <string name="save">Zapisz</string>
    <string name="cancel">Anuluj</string>
    <string name="event_name">Nazwa:</string>
    <string name="event">Wydarzenie</string>
    <string name="to_event">Do wydarzenia:</string>
    <string name="since_event">Od wydarzenia mineło:</string>
    <string name="description">Opis</string>
    <string name="add_event_occurrence">Dodaj nowe wystapienie tego wydarzenia</string>
    <string name="empty_list_message">Nie dodałeś żadnych wydarzeń</string>

    <string-array name="units_of_time">
        <item>Okres</item>
        <item>Lat</item>
        <item>Miesięcy</item>
        <item>Dni</item>
        <item>Godzin</item>
        <item>Minut</item>
        <item>Sekund</item>
    </string-array>

    <string-array name="view_pager_tabs_names">
        <item>Publiczne</item>
        <item>Prywatne</item>
    </string-array>

    <!-- programing  -->
    <string name="app_name">Odliczacz</string>
    <string name="action_settings">Settings</string>
    <string name="action_delete">Delete</string>
    <string name="action_add">add event occurrence</string>
    <string name="save_image">Save description image</string>
    <string name="refresh_events_menu_option">refresh events</string>
    <string name="delete_imagebutton_description">delete event image button</string>
    <string name="new_event_message">Nowe wydarzenie</string>
    <string name="event_message">Wydarzenie</string>
    <string name="back_arrow">&lt;-</string>
    <string name="enter_password">Wpisz hasło</string>
    <string name="private_event">prywatne</string>
    <string name="set_password_message">Ustaw hasło dla ukrytych prywatnych wydarzeń</string>
    <string name="wrong_password_length_message">\"Hasło powinno zawierać 4 cyfry\"</string>

</resources>
