<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_name"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/fragment_event_details_tv_event_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/font_normal" />
        </TableRow>

        <TableRow
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/spacing_normal"
            android:gravity="center_horizontal">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/event_date"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/fragment_event_details_tv_event_date"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:textSize="@dimen/font_normal" />

        </TableRow>

    </TableLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:focusableInTouchMode="true"
        android:orientation="horizontal">

        <EditText
            android:id="@+id/fragment_event_details_edtv_event_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:backgroundTint="@color/green"
            android:gravity="center_horizontal"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:textSize="@dimen/font_normal" />

        <ImageButton
            android:id="@+id/fragment_event_details_btn_save_description"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:contentDescription="@string/save_image"
            android:src="@drawable/ic_action_save" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:gravity="center"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/fragment_event_details_tv_since_or_to_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="@dimen/font_normal" />

        <Spinner
            android:id="@+id/fragment_event_details_spn_period"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/units_of_time"
            android:scrollbarSize="@dimen/font_normal" />
    </LinearLayout>

    <TextView
        android:id="@+id/fragment_event_details_tv_difference_between_today_and_event_log"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/spacing_normal"
        android:gravity="center_horizontal"
        android:textColor="@color/green"
        android:textSize="@dimen/font_normal" />

</LinearLayout>
    
