<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="10dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/name"
            android:textSize="@dimen/font_normal" />

        <EditText
            android:id="@+id/fragment_new_event_edtv_new_event_name"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint=""
            android:padding="10dp" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/divider_normal"
            android:orientation="horizontal">

            <CheckBox
                android:id="@+id/fragment_new_event_chb_is_now_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:checked="true"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:id="@+id/fragment_new_event_tv_is_now_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/fragment_new_event_chb_is_now_event"
                android:text="@string/now" />

            <CheckBox
                android:id="@+id/fragment_new_event_chb_is_private_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginLeft="@dimen/spacing_large"
                android:layout_toRightOf="@id/fragment_new_event_tv_is_now_event"
                android:checked="false"
                android:textSize="@dimen/font_normal" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toRightOf="@id/fragment_new_event_chb_is_private_event"
                android:text="@string/private_event" />

            <android.support.design.widget.FloatingActionButton
                android:id="@+id/fragment_new_event_fab_add_event"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:src="@drawable/ic_action_add"
                app:backgroundTint="@color/gray_dark" />

        </RelativeLayout>

        <DatePicker
            android:id="@+id/fragment_new_event_dp_event_log_date"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:calendarViewShown="false"
            android:datePickerMode="spinner" />

        <TimePicker
            android:id="@+id/fragment_new_event_tp_event_log_time"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:timePickerMode="spinner" />

    </LinearLayout>


</android.support.design.widget.CoordinatorLayout>